# ocf-greeter

./: Cargo.toml  Dioxus.toml  default.nix  flake.nix  rustfmt.toml  tailwind.config.js
assets/: tailwind.css
src/: args.rs  greetd.rs  input.css  main.rs  sessions.rs  tailwind_colors.rs
src/components/: button.rs  input.rs  mod.rs  session_selector.rs
src/greetd/: client.rs  impl.rs  impl_mock.rs  mod.rs  session_builder.rs  state.rs
src/greetd/transport/: greetd.rs  mock.rs  mod.rs  real.rs
