[package]
name = "ocf-greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
enum_dispatch = "0.3.13"
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
iced = { version = "0.13.1", features = ["advanced", "svg"] }
itertools = "0.13.0"
rust-ini = "0.21.1"
shlex = "1.3.0"
