[package]
name = "ocf-greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
dioxus = { version = "0.6.0", features = [] }
enum_dispatch = "0.3.13"
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
itertools = "0.13.0"
rust-ini = "0.21.1"
shlex = "1.3.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
